--- a/index.html
+++ b/index.html
@@ -6,218 +6,194 @@
     <meta name="description" content="FitLab - Entrenamiento y planes personalizados." />
     <title>FitLab</title>
     <link rel="icon" href="images/imagesfavicon.jpg" />
-    <!-- Google Fonts Montserrat -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- Navbar -->
     <nav id="navbar">
       <a href="#hero" class="logo">FitLab</a>
-      <ul class="nav-links">
+      <ul class="nav-links" id="nav-links">
         <li><a href="#hero">Inicio</a></li>
         <li><a href="#services">Servicios</a></li>
         <li><a href="#planes">Planes</a></li>
         <li><a href="#faq">FAQ</a></li>
         <li><a href="#testimonials">Testimonios</a></li>
-        <li><a href="#contact" class="cta-btn">ASOCIATE</a></li>
+        <li><a href="#contact" class="btn btn--cta">ASOCIATE</a></li>
       </ul>
-      <div class="hamburger">
+      <button class="hamburger" aria-label="Abrir menú" aria-expanded="false" aria-controls="nav-links">
         <span></span>
         <span></span>
         <span></span>
-      </div>
+      </button>
     </nav>
 
-    <!-- Hero -->
     <section id="hero">
+      <div class="hero-overlay"></div>
       <div class="hero-content">
         <h1>Bienvenido a FitLab</h1>
         <p>Transformá tu cuerpo con nuestros planes personalizados</p>
-        <a href="#planes" class="cta-hero">Comenzar</a>
+        <a href="#planes" class="btn btn--primary">Comenzar</a>
       </div>
     </section>
 
-    <!-- Servicios -->
     <section id="services">
       <h2>Servicios</h2>
       <div class="services-grid">
         <div class="service-card">
           <img src="images/entrenamiento.jpg" alt="Entrenamiento Personalizado" />
           <h3>Entrenamiento Personalizado</h3>
-          <p>Planes adaptados a tus objetivos y nivel físico. Supervisión constante y rutinas progresivas.</p>
-          <ul>
-            <li>Plan Básico: 2 sesiones/semana</li>
-            <li>Plan Avanzado: 4 sesiones/semana</li>
-            <li>Plan Premium: sesiones diarias + seguimiento y coaching nutricional</li>
-            <li>Asesoramiento de progreso semanal</li>
-          </ul>
-          <a href="#contact" class="btn-contact">Más info</a>
+          <p>Planes adaptados a tus objetivos y nivel físico.</p>
+          <a href="#contact" class="btn btn--secondary">Más info</a>
         </div>
-
         <div class="service-card">
           <img src="images/clases-grupales.jpg" alt="Clases Grupales" />
           <h3>Clases Grupales</h3>
-          <p>Yoga, HIIT, Funcional y más. Clases diseñadas para todos los niveles y objetivos.</p>
-          <ul>
-            <li>Instructor profesional certificado</li>
-            <li>Modalidades y horarios flexibles</li>
-            <li>Clases motivacionales y dinámicas</li>
-          </ul>
-          <a href="#contact" class="btn-contact">Más info</a>
+          <p>Yoga, HIIT, Funcional y más. Clases diseñadas para todos los niveles.</p>
+          <a href="#contact" class="btn btn--secondary">Más info</a>
         </div>
-
         <div class="service-card">
           <img src="images/nutricion.jpg" alt="Planes Nutricionales" />
           <h3>Planes Nutricionales</h3>
-          <p>Planes adaptados a tus objetivos y estilo de vida, con seguimiento profesional.</p>
-          <ul>
-            <li>Básico: 3 comidas + snack</li>
-            <li>Avanzado: 5 comidas + suplementación</li>
-            <li>Premium: seguimiento diario personalizado</li>
-            <li>Consejos de hábitos saludables</li>
-          </ul>
-          <a href="#contact" class="btn-contact">Más info</a>
-        </div>
-
-        <div class="service-card">
-          <img src="images/horarios.jpg" alt="Horarios Flexibles" />
-          <h3>Horarios Flexibles</h3>
-          <p>Adaptamos los horarios a tu rutina, asegurando máxima disponibilidad para todos.</p>
-          <ul>
-            <li>Lunes a Viernes: 07:00 - 22:00</li>
-            <li>Sábados: 09:00 - 16:00</li>
-            <li>Feriados: 09:00 - 16:00</li>
-            <li>Domingos: Cerrado</li>
-            <li>Turnos y reservas online</li>
-          </ul>
-          <a href="#contact" class="btn-contact">Más info</a>
+          <p>Planes adaptados a tu estilo de vida, con seguimiento profesional.</p>
+          <a href="#contact" class="btn btn--secondary">Más info</a>
         </div>
       </div>
     </section>
 
-    <!-- Planes -->
     <section id="planes">
       <h2>Planes de Membresía</h2>
       <div class="plan-toggle">
-        <button id="monthly-btn" class="active">Mensual</button>
-        <button id="annual-btn">Anual</button>
+        <button id="monthly-btn" class="toggle-btn active">Mensual</button>
+        <button id="annual-btn" class="toggle-btn">Anual</button>
       </div>
       <div class="plans-grid">
-        <div class="plan-card plan-basic">
+        <div class="plan-card">
           <h3>Básico</h3>
-          <p class="price">$39.000 /mes</p>
-          <p>Acceso limitado al gimnasio, 2 clases grupales, asesoramiento inicial.</p>
-          <a href="#contact" class="btn-contact">Más info</a>
+          <p class="price" data-monthly="$39.000 /mes" data-annual="$468.000 /año">$39.000 /mes</p>
+          <p>Acceso limitado, 2 clases grupales, asesoramiento inicial.</p>
+          <a href="#contact" class="btn btn--secondary">Elegir Plan</a>
         </div>
         <div class="plan-card plan-premium">
           <h3>Premium</h3>
-          <p class="price">$60.000 /mes</p>
-          <p>Entrenamiento personalizado, nutrición completa, acceso a todas las clases, seguimiento diario.</p>
-          <a href="#contact" class="btn-contact">Más info</a>
+          <p class="price" data-monthly="$70.000 /mes" data-annual="$840.000 /año">$70.000 /mes</p>
+          <p>Acceso completo, todas las clases, coaching semanal.</p>
+          <a href="#contact" class="btn btn--primary">Elegir Plan</a>
         </div>
-        <div class="plan-card plan-advanced">
+        <div class="plan-card">
           <h3>Avanzado</h3>
-          <p class="price">$70.000 /mes</p>
-          <p>Acceso completo al gimnasio, todas las clases grupales, coaching semanal, evaluaciones mensuales.</p>
-          <a href="#contact" class="btn-contact">Más info</a>
+          <p class="price" data-monthly="$60.000 /mes" data-annual="$720.000 /año">$60.000 /mes</p>
+          <p>Entrenamiento personalizado, nutrición, seguimiento diario.</p>
+          <a href="#contact" class="btn btn--secondary">Elegir Plan</a>
         </div>
       </div>
     </section>
 
-    <!-- FAQ -->
     <section id="faq">
       <h2>Preguntas Frecuentes</h2>
-      <div class="faq-item">
-        <h3>¿Se puede cambiar de plan?</h3>
-        <p>Sí, podés cambiar entre mensual y anual en cualquier momento, sin perder los beneficios adquiridos.</p>
-      </div>
-      <div class="faq-item">
-        <h3>¿Hay entrenadores certificados?</h3>
-        <p>Todos nuestros entrenadores están certificados y capacitados en rutinas seguras y efectivas.</p>
-      </div>
-      <div class="faq-item">
-        <h3>¿Ofrecen nutrición personalizada?</h3>
-        <p>Sí, contamos con planes nutricionales adaptados a tus objetivos y condiciones de salud.</p>
-      </div>
-      <div class="faq-item">
-        <h3>¿Hay clases grupales?</h3>
-        <p>
-          Ofrecemos clases grupales de diferentes niveles todos los días, con grupos reducidos para mejor seguimiento.
-        </p>
-      </div>
-      <div class="faq-item">
-        <h3>¿Cómo se abona la cuota?</h3>
-        <p>Podés abonar tus membresías vía tarjeta de crédito, débito o transferencia bancaria segura.</p>
-      </div>
-      <div class="faq-item">
-        <h3>¿Cómo se generan los cargos en mi cuenta?</h3>
-        <p>
-          Los cargos se generan automáticamente según el plan seleccionado y la frecuencia elegida (mensual o anual).
-        </p>
-      </div>
-      <div class="faq-item">
-        <h3>¿Puedo congelar mi membresía?</h3>
-        <p>Sí, ofrecemos congelamiento temporal por motivos de salud o viaje. Contactá soporte para más info.</p>
+      <div class="faq-container">
+        <div class="faq-item">
+          <h3 aria-expanded="false" aria-controls="faq1-answer">
+            ¿Se puede cambiar de plan?
+            <span class="faq-toggle">+</span>
+          </h3>
+          <p id="faq1-answer">
+            Sí, podés cambiar entre mensual y anual en cualquier momento, sin perder los beneficios adquiridos.
+          </p>
+        </div>
+        <div class="faq-item">
+          <h3 aria-expanded="false" aria-controls="faq2-answer">
+            ¿Hay entrenadores certificados?
+            <span class="faq-toggle">+</span>
+          </h3>
+          <p id="faq2-answer">
+            Todos nuestros entrenadores están certificados y capacitados en rutinas seguras y efectivas.
+          </p>
+        </div>
+        <div class="faq-item">
+          <h3 aria-expanded="false" aria-controls="faq3-answer">
+            ¿Ofrecen nutrición personalizada?
+            <span class="faq-toggle">+</span>
+          </h3>
+          <p id="faq3-answer">
+            Sí, contamos con planes nutricionales adaptados a tus objetivos y condiciones de salud.
+          </p>
+        </div>
       </div>
     </section>
 
-    <!-- Testimonios -->
     <section id="testimonials">
       <h2>Testimonios</h2>
       <div class="testimonials-container">
         <div class="testimonials-track">
           <div class="testimonial">
-            <img src="images/cliente1.jpg" alt="Cliente" />
+            <img src="images/cliente1.jpg" alt="Foto del cliente Ana M." />
             <p>"Excelente atención y resultados rápidos" - Ana M.</p>
           </div>
           <div class="testimonial">
-            <img src="images/cliente2.jpg" alt="Cliente" />
+            <img src="images/cliente2.jpg" alt="Foto del cliente Juan P." />
             <p>"Entrenadores muy profesionales y motivadores" - Juan P.</p>
           </div>
           <div class="testimonial">
-            <img src="images/cliente3.jpg" alt="Cliente" />
-            <p>"Las clases grupales son divertidas y desafiantes" - Carla R.</p>
+            <img src="images/cliente3.jpg" alt="Foto del cliente Carla R." />
+            <p>"Las clases grupales son divertidas" - Carla R.</p>
           </div>
           <div class="testimonial">
-            <img src="images/cliente4.jpg" alt="Cliente" />
+            <img src="images/cliente4.jpg" alt="Foto del cliente Pedro G." />
             <p>"Mi plan nutricional cambió mi vida" - Pedro G.</p>
           </div>
           <div class="testimonial">
-            <img src="images/cliente5.jpg" alt="Cliente" />
-            <p>"FitLab me ayudó a cumplir mis objetivos en tiempo récord" - Lucía F.</p>
+            <img src="images/cliente5.jpg" alt="Foto del cliente Lucía F." />
+            <p>"Cumplí mis objetivos en tiempo récord" - Lucía F.</p>
           </div>
           <div class="testimonial">
-            <img src="images/cliente6.jpg" alt="Cliente" />
+            <img src="images/cliente6.jpg" alt="Foto del cliente Martín S." />
+            <p>"Ambiente profesional y motivador" - Martín S.</p>
+          </div>
+          <div class="testimonial">
+            <img src="images/cliente1.jpg" alt="Foto del cliente Ana M." />
+            <p>"Excelente atención y resultados rápidos" - Ana M.</p>
+          </div>
+          <div class="testimonial">
+            <img src="images/cliente2.jpg" alt="Foto del cliente Juan P." />
+            <p>"Entrenadores muy profesionales y motivadores" - Juan P.</p>
+          </div>
+          <div class="testimonial">
+            <img src="images/cliente3.jpg" alt="Foto del cliente Carla R." />
+            <p>"Las clases grupales son divertidas" - Carla R.</p>
+          </div>
+          <div class="testimonial">
+            <img src="images/cliente4.jpg" alt="Foto del cliente Pedro G." />
+            <p>"Mi plan nutricional cambió mi vida" - Pedro G.</p>
+          </div>
+          <div class="testimonial">
+            <img src="images/cliente5.jpg" alt="Foto del cliente Lucía F." />
+            <p>"Cumplí mis objetivos en tiempo récord" - Lucía F.</p>
+          </div>
+          <div class="testimonial">
+            <img src="images/cliente6.jpg" alt="Foto del cliente Martín S." />
             <p>"Ambiente profesional y motivador" - Martín S.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Contacto -->
     <section id="contact">
       <h2>Contacto</h2>
       <form>
         <input type="text" placeholder="Nombre" required />
         <input type="email" placeholder="Email" required />
         <textarea placeholder="Mensaje" required></textarea>
-        <button type="submit">Enviar</button>
+        <button type="submit" class="btn btn--primary">Enviar</button>
       </form>
     </section>
 
-    <!-- Footer -->
     <footer>
       <div class="footer-content">
-        <img src="images/sobre-nosotros.jpg" alt="FitLab" />
+        <img src="images/sobre-nosotros.jpg" alt="Logo de FitLab en el footer" />
         <div class="footer-socials">
-          <a href="https://www.facebook.com/" target="_blank"><img src="images/logofacebook.png" alt="Facebook" /></a>
-          <a href="https://www.tiktok.com/explore?lang=es-419" target="_blank"
-            ><img src="images/logotiktok.png" alt="TikTok"
-          /></a>
-          <a href="https://www.instagram.com/" target="_blank"
-            ><img src="images/logoinstagram.jpg" alt="Instagram"
-          /></a>
+          <a href="#" target="_blank"><img src="images/logofacebook.png" alt="Facebook" /></a>
+          <a href="#" target="_blank"><img src="images/logotiktok.png" alt="TikTok" /></a>
+          <a href="#" target="_blank"><img src="images/logoinstagram.jpg" alt="Instagram" /></a>
         </div>
         <p>
           FitLab - Entrenamiento profesional, planes personalizados y nutrición completa para alcanzar tus objetivos.
