--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body
     <nav id="navbar">
       <a href="#hero" class="logo">FitLab</a>
       <ul class="nav-links" id="nav-links">
